Sign in + Sign Up UnitTest More HTML

--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign in</title>
-    <link rel="stylesheet" href="GilbertStyle.css">
+    <link rel="stylesheet" href="../static/GilbertStyle.css">
 </head>
 <body>
 <div class="container">
