--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gilbert</title>
-    <link rel="stylesheet" href="GilbertStyle.css">
+    <link rel="stylesheet" href="../static/GilbertStyle.css">
     <!-- Simple icon support -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -16,9 +16,11 @@
 
 <nav>
     <ul>
-        <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-        <li><a href="#"><i class="fas fa-tags"></i> Brands</a></li>
-        <li><a href="#"><i class="fas fa-heart"></i> Favourites</a></li>
+        <li><a href="home"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="brands"><i class="fas fa-tags"></i> Brands</a></li>
+        <li><a href="favs"><i class="fas fa-heart"></i> Favourites</a></li>
+        <li><a href="signin"><i class="fas fa-profile"></i>Sign In</a></li>
+        <li><a href="signup"><i class="fas fa-profile"></i>Sign Up</a></li>
 
     </ul>
 </nav>
