--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,7 +39,7 @@
         <button type="submit"><i class="fas fa-search"></i></button>
     </div>
 
-    <h2>Featured Products</h2>
+    <h2 style="text-align: center"> Featured Products</h2>
     <div class="products-grid">
         <!-- Product Card 1 -->
         <div class="product-card">
