--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gilbert</title>
-    <link rel="stylesheet" href="../static/GilbertStyle.css">
+    <link rel="stylesheet" href="/GilbertStyle.css">
     <!-- Simple icon support -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
