--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,13 +20,13 @@
     </button>
     <div class="nav-links">
         <ul class="nav-main">
-            <li><a href="home"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="brands"><i class="fas fa-tags"></i> Brands</a></li>
-            <li><a href="fav"><i class="fas fa-heart"></i> Favourites</a></li>
+            <li><a href="/home"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/brands"><i class="fas fa-tags"></i> Brands</a></li>
+            <li><a href="/fav"><i class="fas fa-heart"></i> Favourites</a></li>
         </ul>
         <ul class="nav-auth">
-            <li><a href="signin"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
-            <li><a href="signup"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+            <li><a href="/signin"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
+            <li><a href="/signup"><i class="fas fa-user-plus"></i> Sign Up</a></li>
         </ul>
     </div>
 </nav>
