--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -23,7 +23,7 @@
         <button type="submit">Register <a href="/loggedin"> </a></button>
     </form>
     <div class="link">
-        <a href="/login">Allrede bruger? Log ind</a>
+        <a href="/signin">Allrede bruger? Log ind</a>
     </div>
 </div>
 
