Sign in + Sign Up UnitTest More HTML

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,6 +23,7 @@
             <li><a href="/home"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="/brands"><i class="fas fa-tags"></i> Brands</a></li>
             <li><a href="/fav"><i class="fas fa-heart"></i> Favourites</a></li>
+            <li><a href="/sell"><i class="fas fa-plus-circle"></i> Sell</a></li>
         </ul>
         <ul class="nav-auth">
             <li><a href="/signin"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
